--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>com.hackathon</groupId>
 	<artifactId>myfirstproject</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>war</packaging>
 	<name>myfirstproject</name>
 	<description>Demo project for Hello World</description>
 	<properties>
