--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,11 @@
                                 <artifactId>maven-compiler-plugin</artifactId>
                                 <version>3.8.1</version>
                         </plugin>
+			<plugin>
+         			<groupId>org.apache.maven.plugins</groupId>
+        			<artifactId>maven-deploy-plugin</artifactId>
+				<version>2.8.2</version>
+      			</plugin>
 		</plugins>
 	</build>
 
